--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="sign_out">Signout</string>
     <string name="title_activity_landing_page">Home</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_loan">Canadian Student Loan</string>
