--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">FinastraHack</string>
+    <string name="app_name">Lendr</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign In</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -98,4 +98,5 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_non_secured_nav">NonSecuredNavActivity</string>
+    <string name="title_activity_setting">Settings</string>
 </resources>
